<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
    <string name="app_name" translatable="false">O Vigia</string>
    <string name="title_o" translatable="false">O</string>
    <string name="title_vigia" translatable="false">Vigia</string>
    <string name="btn_me_desafie">Me desafie</string>
    <string name="cd_settings">Configurações</string>
    <string name="cd_profile">Perfil</string>
    <string name="cd_edit_profile">Editar perfil</string>
    <string name="cd_catalog">Catálogo de heróis</string>
    <string name="cd_friends">Amigos</string>
    <string name="cd_back">Voltar</string>
    <string name="cd_previous_question">Pergunta anterior</string>
    <string name="cd_watcher_art">O Vigia pensativo</string>
    <string name="splash_tagline">Nada escapa ao olhar do Vigia.</string>
    <string name="percent_value">%1$d%%</string>
    <string name="profile_empty">Você ainda não jogou nenhuma partida.\nAceite o desafio para começar o seu perfil.</string>
    <string name="profile_stat_games">Partidas</string>
    <string name="profile_stat_characters">Personagens</string>
    <string name="profile_stat_collection">Heróis</string>
    <string name="profile_score_title">Vigia × você</string>
    <string name="profile_score_ring_caption">do Vigia</string>
    <string name="profile_score_engine">Vigia acertou</string>
    <string name="profile_score_player">Você venceu</string>
    <string name="profile_score_description">O Vigia acertou %1$d de %2$d partidas (%3$d%%). Você venceu %4$d.</string>
    <string name="profile_rank_count" translatable="false">%1$d / %2$d</string>
    <string name="profile_favorites_title">Personagens mais pensados</string>
    <string name="profile_recent_title">Partidas recentes</string>
    <string name="profile_unknown_character">Personagem desconhecido</string>
    <string name="profile_outcome_engine">O Vigia acertou</string>
    <string name="profile_outcome_alternatives">Achado nas alternativas</string>
    <string name="profile_outcome_revealed">Você venceu o Vigia</string>
    <string name="profile_favorite_position">%1$dº</string>
    <string name="profile_rank_max">Você chegou ao topo. O Vigia está de olho em você.</string>
    <plurals name="profile_rank_next">
        <item quantity="one">Falta %1$d partida para %2$s</item>
        <item quantity="many">Faltam %1$d partidas para %2$s</item>
        <item quantity="other">Faltam %1$d partidas para %2$s</item>
    </plurals>
    <plurals name="profile_times_picked">
        <item quantity="one">Pensado em %1$d partida</item>
        <item quantity="many">Pensado em %1$d partidas</item>
        <item quantity="other">Pensado em %1$d partidas</item>
    </plurals>
    <string name="profile_time_now">agora</string>
    <string name="profile_time_minutes">há %1$d min</string>
    <string name="profile_time_hours">há %1$d h</string>
    <string name="profile_time_yesterday">ontem</string>
    <string name="profile_time_days">há %1$d dias</string>
    <string name="profile_time_date">em %1$s</string>
    <string name="profile_catalog_title">Seu catálogo</string>
    <string name="profile_catalog_empty">Nenhum herói desbloqueado ainda. Pense em um herói e faça o Vigia acertar.</string>
    <string name="profile_open_catalog">Abrir catálogo</string>
    <string name="profile_catalog_more" translatable="false">+%1$d</string>
    <string name="profile_sign_out">Sair da conta</string>
    <string name="profile_signed_out_message">Você saiu da sua conta.</string>
    <string name="friends_title">Amigos</string>
    <string name="friends_cd_refresh">Atualizar amigos e pedidos</string>
    <string name="friends_at" translatable="false">\@</string>
    <string name="friends_username_format" translatable="false">\@%1$s</string>
    <string name="friends_not_configured_title">Amigos indisponíveis</string>
    <string name="friends_not_configured_body">Esta versão do app não tem servidor de amigos configurado.</string>
    <string name="friends_connect_title">Jogue com seus amigos</string>
    <string name="friends_connect_body">Conecte sua conta para adicionar amigos, ver o perfil deles, os heróis que já desbloquearam e as conquistas.</string>
    <string name="friends_hint_password">Senha da sua conta</string>
    <string name="friends_connect_action">Conectar conta</string>
    <string name="friends_privacy_note">Seus amigos veem seu nome, @usuário, foto, banner, bio, números, heróis e conquistas. Seu e-mail nunca aparece.</string>
    <string name="friends_username_title">Escolha seu @usuário</string>
    <string name="friends_username_body">É com ele que seus amigos vão te encontrar.</string>
    <string name="friends_hint_username">Nome de usuário</string>
    <string name="friends_username_helper">De 3 a 20 letras, números ou _</string>
    <string name="friends_username_action">Salvar @usuário</string>
    <string name="friends_username_taken">Esse @usuário já é de outra pessoa. Tente outro.</string>
    <string name="friends_username_invalid">Use só letras sem acento, números e _.</string>
    <string name="friends_username_too_short">O @usuário precisa ter pelo menos 3 caracteres.</string>
    <string name="friends_username_too_long">O @usuário pode ter no máximo 20 caracteres.</string>
    <string name="friends_error_title">Não foi possível carregar</string>
    <string name="friends_error_offline">Sem conexão com a internet.</string>
    <string name="friends_error_wrong_password">Senha incorreta.</string>
    <string name="friends_error_generic">Algo deu errado. Tente de novo.</string>
    <string name="friends_me_label">Você é</string>
    <string name="friends_cd_me">Seu @usuário é %1$s</string>
    <string name="friends_add_title">Adicionar amigo</string>
    <string name="friends_search_hint">usuário do amigo</string>
    <string name="friends_cd_search">Buscar</string>
    <string name="friends_search_not_found">Ninguém usa esse @usuário.</string>
    <string name="friends_search_invalid">Digite um @usuário válido: 3 a 20 letras, números ou _.</string>
    <string name="friends_incoming_title">Pedidos recebidos (%1$d)</string>
    <string name="friends_list_title">Seus amigos (%1$d)</string>
    <string name="friends_outgoing_title">Pedidos enviados (%1$d)</string>
    <string name="friends_empty">Você ainda não tem amigos aqui. Busque alguém pelo @usuário.</string>
    <string name="friends_request_received_detail">\@%1$s quer ser seu amigo</string>
    <string name="friends_request_sent_detail">Aguardando resposta</string>
    <string name="friends_action_add">Adicionar</string>
    <string name="friends_action_accept">Aceitar</string>
    <string name="friends_action_decline">Recusar pedido</string>
    <string name="friends_action_cancel">Cancelar pedido</string>
    <string name="friends_status_sent">Pedido enviado</string>
    <string name="friends_status_friends">Amigos</string>
    <string name="friends_status_you">Você</string>
    <string name="friends_cd_open_profile">Abrir perfil de %1$s, \@%2$s</string>
    <string name="friends_message_request_sent">Pedido de amizade enviado.</string>
    <string name="friends_message_became_friends">Agora vocês são amigos!</string>
    <string name="friends_message_declined">Pedido recusado.</string>
    <string name="friends_message_canceled">Pedido cancelado.</string>
    <string name="friends_message_username_saved">\@usuário salvo.</string>
    <string name="friends_message_connected">Conta conectada.</string>
    <string name="friend_profile_updated">Atualizado %1$s</string>
    <string name="friend_profile_watcher_rate">Vigia acerta %1$d%%</string>
    <string name="friend_profile_stat_player_wins">Venceu o Vigia</string>
    <string name="friend_profile_heroes_title">Heróis desbloqueados</string>
    <string name="friend_profile_heroes_empty">Nenhum herói desbloqueado ainda.</string>
    <plurals name="friend_profile_all_heroes">
        <item quantity="one">Ver o %1$d herói</item>
        <item quantity="many">Ver todos os %1$d heróis</item>
        <item quantity="other">Ver todos os %1$d heróis</item>
    </plurals>
    <string name="friend_profile_hero_locked">Faça o Vigia acertar %1$s para ver a ficha.</string>
    <string name="friend_profile_remove">Desfazer amizade</string>
    <string name="friend_profile_remove_title">Desfazer amizade com %1$s?</string>
    <string name="friend_profile_remove_message">Vocês deixam de ver o perfil um do outro. Dá para mandar um novo pedido depois.</string>
    <string name="friend_profile_remove_confirm">Desfazer</string>
    <string name="friend_profile_not_friends">Vocês não são mais amigos.</string>
    <string name="friend_profile_not_found">Este jogador não tem mais perfil online.</string>
    <string name="achievements_title">Conquistas</string>
    <string name="achievements_show_all">Ver todas (%1$d)</string>
    <string name="achievement_count" translatable="false">%1$d / %2$d</string>
    <string name="achievement_cd_unlocked">%1$s, desbloqueada. %2$s %3$d de %4$d.</string>
    <string name="achievement_cd_locked">%1$s, ainda bloqueada. %2$s %3$d de %4$d.</string>
    <string name="achievement_first_hero">Primeiro da coleção</string>
    <string name="achievement_first_hero_desc">Desbloqueie seu primeiro herói.</string>
    <string name="achievement_heroes_10">Colecionador</string>
    <string name="achievement_heroes_10_desc">Desbloqueie 10 heróis.</string>
    <string name="achievement_heroes_25">Arquivista</string>
    <string name="achievement_heroes_25_desc">Desbloqueie 25 heróis.</string>
    <string name="achievement_heroes_50">Guardião do Multiverso</string>
    <string name="achievement_heroes_50_desc">Desbloqueie 50 heróis.</string>
    <string name="achievement_avengers_5">Vingadores, avante!</string>
    <string name="achievement_avengers_5_desc">Desbloqueie 5 Vingadores.</string>
    <string name="achievement_xmen_5">Escola Xavier</string>
    <string name="achievement_xmen_5_desc">Desbloqueie 5 X-Men.</string>
    <string name="achievement_guardians_3">Eu sou Groot</string>
    <string name="achievement_guardians_3_desc">Desbloqueie 3 Guardiões da Galáxia.</string>
    <string name="achievement_fantastic_four">Quarteto completo</string>
    <string name="achievement_fantastic_four_desc">Desbloqueie 4 membros do Quarteto Fantástico.</string>
    <string name="achievement_villains_5">Lado sombrio</string>
    <string name="achievement_villains_5_desc">Desbloqueie 5 vilões.</string>
    <string name="achievement_games_10">Frequentador</string>
    <string name="achievement_games_10_desc">Jogue 10 partidas.</string>
    <string name="achievement_games_50">Maratonista</string>
    <string name="achievement_games_50_desc">Jogue 50 partidas.</string>
    <string name="achievement_beat_watcher">Enganei o Vigia</string>
    <string name="achievement_beat_watcher_desc">Vença o Vigia uma vez.</string>
    <string name="achievement_beat_watcher_10">Mestre dos disfarces</string>
    <string name="achievement_beat_watcher_10_desc">Vença o Vigia 10 vezes.</string>
    <string name="auth_title_sign_in">Entre na sua conta</string>
    <string name="auth_title_sign_up">Crie sua conta</string>
    <string name="question_number">Questão Nº %1$d:</string>
    <string name="question_placeholder">Carregando personagens…</string>
    <string name="btn_sim">Sim</string>
    <string name="btn_nao">Não</string>
    <string name="btn_provavelmente_sim">Provavelmente sim</string>
    <string name="btn_provavelmente_nao">Provavelmente não</string>
    <string name="btn_nao_sei">Não sei</string>
    <string name="btn_retry">Tentar de novo</string>
    <string name="continue_prompt_question">Você deseja continuar?</string>
    <string name="select_alternative_title">Selecione o personagem pensado:</string>
    <string name="btn_none_of_alternatives">Não aparece</string>
    <string name="btn_validar">Validar</string>
</resources>