<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/bg_galaxy">

    <ImageView
        android:id="@+id/imageArt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/bar_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cd_watcher_art"
        android:scaleType="fitCenter"
        android:src="@drawable/art_watcher"
        app:layout_constraintBottom_toTopOf="@id/btnMeDesafie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSettings"
        app:layout_constraintWidth_max="420dp" />

    <ImageButton
        android:id="@+id/btnSettings"
        style="@style/Widget.OVigia.IconButton"
        android:layout_margin="@dimen/bar_margin"
        android:contentDescription="@string/cd_settings"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnFriends"
        style="@style/Widget.OVigia.IconButton"
        android:layout_marginTop="@dimen/bar_margin"
        android:contentDescription="@string/cd_friends"
        android:src="@drawable/ic_group"
        app:layout_constraintStart_toEndOf="@id/btnSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnCatalog"
        style="@style/Widget.OVigia.IconButton"
        android:layout_marginTop="@dimen/bar_margin"
        android:contentDescription="@string/cd_catalog"
        android:src="@drawable/ic_catalog"
        app:layout_constraintEnd_toStartOf="@id/btnProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnProfile"
        style="@style/Widget.OVigia.IconButton"
        android:layout_margin="@dimen/bar_margin"
        android:contentDescription="@string/cd_profile"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/title"
        layout="@layout/view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMeDesafie"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_me_desafie"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_max="@dimen/content_max_width" />

</androidx.constraintlayout.widget.ConstraintLayout>
